# f6502

./: .clang-format  .gitignore  README.md  addr.h  asm6502.h  build.sh  cpu.c  dump  emu.c  instr.c  instr.h  instructions.txt  mem.c  meson.build  notes  run_processortests.py  run_tests.py  show_eval.py  utils.c  utils.h  utils.py
.cache/clangd/index/: 6502.h.8AE356D52A0CE7B2.idx  addr.c.808064A818CC6A14.idx  addr.c.D5A41050981BA120.idx  addr.h.72A3BDF08C06CB3C.idx  addr.h.A61161EF9C7EDFD5.idx  asm6502.h.4AAA624BBEBE415F.idx  cpu.c.1C2984AC8B2229A6.idx  cpu.c.1DC017A68AD24AC9.idx  cpu.h.7A2FFC1297143B2A.idx  cpu.h.D70F5743F65EB703.idx  emu.c.A83B391F9E2CA5F1.idx  emu.c.CCFF7C5C4E8F25D8.idx  instr.c.5E48055F22C85897.idx  instr.c.D4C4A59F4687DFF3.idx  instr.h.5D73E202FC087B16.idx  instr.h.F45B0F6BF16E1EF0.idx  instr_arith.c.5732808CC9AED02E.idx  instr_arith.h.1CC8A942B0AF89B9.idx  instr_branch.c.0FC5D22F80B03770.idx  instr_branch.h.BE1097FE50B97E7C.idx  instr_ctrl.c.9FCF43433B6066ED.idx  instr_ctrl.h.6990B2C14EEFB248.idx  instr_flags.c.055AE2ABC626957B.idx  instr_flags.h.731C0E65128243B7.idx  instr_inc.c.B9C6FB3D07E72BFE.idx  instr_inc.h.1A5798B15528F1C1.idx  instr_load.c.D4A146C1740B5594.idx  instr_load.h.A930D4B5FF0F0860.idx  instr_logic.c.B9F468A7BCD8E277.idx  instr_logic.h.C846D9F0DE0E8FFF.idx  instr_matrix.h.A930348C6EDFECFF.idx  (+21 more)
arithmetic/: arithmetic  arithmetic.c
bcd_test/: main.c  tst
docs/: docs.py  ops.py
include/: addr.h  bin.h  cpu.h  emu.h  instr.h  instr_arith.h  instr_branch.h  instr_ctrl.h  instr_flags.h  instr_inc.h  instr_load.h  instr_logic.h  instr_shift.h  instr_stack.h  instr_trans.h  mem.h  types.h  utils.h
logs/: 69_1360.dump  69_1404.dump  69_3135.dump  69_3860.dump  69_5111.dump  69_6362.dump  69_6399.dump  69_8893.dump  eval.json
src/: addr.c  bin.c  cpu.c  emu.c  instr.c  instr_arith.c  instr_branch.c  instr_ctrl.c  instr_flags.c  instr_inc.c  instr_load.c  instr_logic.c  instr_shift.c  instr_stack.c  instr_trans.c  mem.c  testrunner.c  tui.c  utils.c
tests/: build_tests.sh  convert_tests.py
tests/6502_65C02_functional_tests/: func_test.lst  func_test.map
tests/functional-tests/: build-tests.sh  test.c
tests/single-step-tests/: README.md  ops.py  results.py  test.c
